Colocar Imagens no Index

--- a/index.html
+++ b/index.html
@@ -53,17 +53,20 @@
       <!-- HERO -->
       <header class="hero">
         <h2>Manual Interativo de GitHub para acompanhar uma PAP</h2>
+
         <p>
           Este site foi criado para servir como <strong>manual de apoio</strong> durante a realização de uma
-          <strong>PAP</strong>, ajudando os alunos a manterem o projeto organizado, documentado e com evidências claras do
-          trabalho desenvolvido ao longo do tempo.
+          <strong>PAP</strong>, ajudando a organizar o projeto desde o primeiro dia até à entrega final.
+          Ao longo do trabalho, vais criar ficheiros, alterar versões, melhorar documentos, registar evidências e, por vezes,
+          corrigir erros. Com um repositório bem organizado, fica muito mais simples manter tudo controlado.
         </p>
 
         <p>
           A ideia é simples: o <strong>repositório GitHub</strong> funciona como a “pasta oficial” do projeto.
-          Nele ficam guardados os ficheiros, a documentação (relatório, planeamento, recursos), as evidências (prints)
-          e um histórico das alterações (commits/atualizações). Assim, o projeto fica mais fácil de acompanhar,
-          melhorar e entregar.
+          Nele ficam guardados:
+          <strong>ficheiros do projeto</strong>, <strong>documentação</strong> (planeamento/relatório), <strong>prints/evidências</strong>
+          e o registo de alterações ao longo do tempo. Assim, o projeto fica mais fácil de acompanhar, melhorar e justificar
+          com evidências reais.
         </p>
 
         <div class="meta">
@@ -73,11 +76,10 @@
           <span class="tag">🚀 GitHub Pages</span>
         </div>
 
-        <!-- IMAGEM PRINCIPAL (a tua "github") -->
-        <div class="prints" style="margin-top:14px">
-          <div class="ph">
-            <small>Capa do manual (coloca a imagem na pasta <code>images/</code>)</small>
-            <img src="images/github.png" alt="Capa do manual GitHub para PAP">
+        <!-- IMAGEM PRINCIPAL (centrada) -->
+        <div class="prints" style="margin-top:14px; display:flex; justify-content:center">
+          <div class="ph" style="max-width: 860px; width:100%">
+            <img src="images/github.png" alt="Imagem inicial do manual" style="display:block; margin:0 auto;">
           </div>
         </div>
 
@@ -95,9 +97,9 @@
         <p class="subtitle">Objetivo: apoiar o desenvolvimento do projeto do início ao fim, com organização e evidências.</p>
 
         <p>
-          Ao longo da PAP, é normal existirem várias versões de ficheiros, mudanças de ideias, correções e melhorias.
-          Sem um método de organização, torna-se fácil perder trabalho, confundir versões ou não conseguir justificar
-          decisões tomadas durante o desenvolvimento. Este manual ajuda a resolver isso.
+          Ao longo do projeto é normal existirem várias versões de ficheiros, mudanças de ideias, correções e melhorias.
+          Sem um método de organização, torna-se fácil perder trabalho, confundir versões ou não conseguir demonstrar
+          aquilo que foi feito em cada etapa. Este manual guia-te nas rotinas essenciais para manteres o projeto “arrumado”.
         </p>
 
         <p>
@@ -108,26 +110,27 @@
           <li><strong>Criar e manter</strong> um repositório do projeto.</li>
           <li><strong>Organizar</strong> pastas (código, docs, imagens/prints, recursos).</li>
           <li><strong>Registar evidências</strong> do trabalho (prints e documentos).</li>
-          <li><strong>Trabalhar em segurança</strong> com branches e Pull Requests (sem estragar a versão principal).</li>
+          <li><strong>Trabalhar em segurança</strong> com branches e Pull Requests.</li>
           <li><strong>Gerir tarefas</strong> com Issues (o que falta fazer, o que já foi feito).</li>
-          <li><strong>Publicar</strong> um site do projeto com GitHub Pages (manual, relatório, protótipo, portefólio).</li>
+          <li><strong>Publicar</strong> um site do projeto com GitHub Pages (quando fizer sentido).</li>
         </ul>
 
         <div class="hint">
-          Sugestão: usa este manual como referência semanal. Sempre que avançares uma fase, volta aqui e confirma se o repositório
-          continua limpo, organizado e atualizado.
+          Sugestão: utiliza este manual como referência semanal. Sempre que avançares uma fase, confirma se o repositório
+          continua limpo, organizado e atualizado (ficheiros no sítio certo e evidências guardadas).
         </div>
       </section>
 
-      <!-- IMAGEM "INDEX" (a dos painéis) -->
+      <!-- VISÃO GERAL (INFOGRÁFICO) -->
       <section class="section">
         <h2>Visão geral dos tópicos</h2>
-        <p class="subtitle">Resumo visual do que vais aprender em cada secção.</p>
+        <p class="subtitle">
+          Este infográfico resume o que vais encontrar em cada secção e ajuda-te a escolher por onde começar.
+        </p>
 
-        <div class="prints">
-          <div class="ph">
-            <small>Infográfico (coloca a imagem na pasta <code>images/</code>)</small>
-            <img src="images/index.png" alt="Resumo visual dos tópicos do manual">
+        <div class="prints" style="display:flex; justify-content:center">
+          <div class="ph" style="max-width: 980px; width:100%">
+            <img src="images/index.png" alt="Infográfico com visão geral dos tópicos" style="display:block; margin:0 auto;">
           </div>
         </div>
 
@@ -139,7 +142,13 @@
       <!-- COMO USAR AO LONGO DA PAP -->
       <section class="section">
         <h2>Como usar este manual ao longo do projeto</h2>
-        <p class="subtitle">Uma rotina simples que funciona durante toda a PAP.</p>
+        <p class="subtitle">Uma rotina simples, repetível e eficaz durante toda a PAP.</p>
+
+        <p>
+          Este manual não é para “ler uma vez e esquecer”. A ideia é ir usando durante o projeto:
+          no início para preparar o repositório, durante o desenvolvimento para manter o trabalho atualizado e,
+          no final, para garantir que tudo está pronto para entregar e apresentar.
+        </p>
 
         <div class="grid">
           <div class="card">
@@ -152,9 +161,9 @@
             </div>
             <div class="body">
               <ul style="margin:0; padding-left:18px; color:rgba(255,255,255,.86)">
-                <li>Criar repositório (Public se vais usar Pages).</li>
+                <li>Criar repositório com nome claro e descrição.</li>
                 <li>Definir pastas (<code>src/</code>, <code>docs/</code>, <code>images/</code>).</li>
-                <li>Adicionar um README com objetivo e plano.</li>
+                <li>Adicionar uma explicação inicial (objetivo + plano).</li>
               </ul>
             </div>
           </div>
@@ -169,9 +178,9 @@
             </div>
             <div class="body">
               <ul style="margin:0; padding-left:18px; color:rgba(255,255,255,.86)">
-                <li>Upload de documentos/prints importantes.</li>
-                <li>Atualizar o README com novidades (se necessário).</li>
-                <li>Usar Issues como lista de tarefas e progresso.</li>
+                <li>Adicionar ficheiros novos e documentação.</li>
+                <li>Guardar prints/evidências do que foi feito.</li>
+                <li>Fechar Issues concluídas e criar novas tarefas.</li>
               </ul>
             </div>
           </div>
@@ -186,9 +195,9 @@
             </div>
             <div class="body">
               <ul style="margin:0; padding-left:18px; color:rgba(255,255,255,.86)">
-                <li>Criar uma branch para alterações relevantes.</li>
+                <li>Criar branch para alterações relevantes.</li>
                 <li>Abrir Pull Request para integrar na main.</li>
-                <li>Guardar evidências (prints do PR, merge, etc.).</li>
+                <li>Guardar evidências (PR criado e merge feito).</li>
               </ul>
             </div>
           </div>
@@ -204,15 +213,15 @@
             <div class="body">
               <ul style="margin:0; padding-left:18px; color:rgba(255,255,255,.86)">
                 <li>Conferir estrutura e ficheiros finais.</li>
+                <li>Confirmar links e evidências no repositório.</li>
                 <li>Ativar/confirmar GitHub Pages (se aplicável).</li>
-                <li>Garantir links no README (repo + pages).</li>
               </ul>
             </div>
           </div>
         </div>
 
         <div class="hint">
-          O que interessa é consistência: projeto organizado + evidências regulares + histórico de evolução.
+          O que interessa é consistência: projeto organizado + evidências regulares + evolução documentada.
         </div>
       </section>
 
